# flathub-inactive-repo-list

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_repo_list.py  inactive.txt  pyproject.toml
.github/: validate.py
.github/workflows/: generate.yml  validate.yml
